** WARNING: `iced` command does not support shadow-cljs yet.
* Add neovim virtual text support.
** Evaluation result and lint warning messages are shown as virtual text.
** WARNING: Neovim only
* Add `g:iced#lint#use_virtual_text` option.
** WARNING: Neovim only
* https://github.com/liquidz/vim-iced/pull/87[#87]: Add `:IcedEvalVisual` and `:IcedEvalReplVisual` commands to evaluate selected forms.

=== Changed
* Update `:IcedEval` not to evaluate `ns` form every evaluations.
** This leads to evaluation performance improvement for CLJS codes.
* Update not to switch session unnecessarily at cljs repl startup.
* Update echoing eval result to shorten

=== Fixed
* Fix a bug that `:IcedDefJump` fails for protocol fns.
* Fix a type checking bug in testing.
// }}}

== 0.10.0 (2019-02-19)
// {{{
=== Added
* Add support for https://github.com/bhauman/figwheel-main[figwheel-main].
* Add `:IcedCljsRepl` command for general use of starting CLJS REPL.
* Add `:IcedCycleSession` command for cycling clj/cljs session.
* Add `g:iced#nrepl#auto#does_switch_session` option for switching CLJ/CLJS session automatically.

=== Changed
* (Breaking) Rename `figwheel` CLJS environment to `figwheel-sidecar`.
* Bump nrepl to 0.6.0.
* Bump cider-nrepl to 0.21.1.
* Bump piggieback to 0.4.0.
* (Breaking) Change to require neovim 0.3.2 or later.
* Change status text to clarify CLJ/CLJS session status.

=== Removed
* (Breaking) Remove `iced#nrepl#cljs#custom` option.
** Instead of this option, `:IcedCljsRepl` command is added.

=== Fixed
* Fix a bug that response to difference IDs cannot be processed correctly.
// }}}

== 0.9.3 (2019-01-30)
// {{{
=== Added
* Add hooking feature.
** See details `:h vim-iced-customizing-hooks`

=== Changed
* Bump iced-nrepl to 0.4.1.
* https://github.com/liquidz/vim-iced/pull/85[#85]: Update sample code for debugging to work correctly.

=== Removed
* Remove `g:iced#lint#message_max_length` option. (https://github.com/liquidz/vim-iced/pull/79[#79])

=== Fixed